# mygame

./: .gitignore  CMakeLists.txt
include/: main.h  sprite.h  texture.h  window.h
src/: CMakeLists.txt  main.cpp  texture.cpp  window.cpp
